--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div
           class="app-card"
-          onclick="redirectToPlayStore('YourPlayStoreLink2')"
+          onclick="redirectToPlayStore('market://details?id=com.ig.moto.racing')"
         >
           <img
             src="path/to/your/app-icon2.png"
