--- a/index.html
+++ b/index.html
@@ -2,135 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>App Promotion</title>
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Thank You</title>
     <style>
-      body {
-        padding: 20px;
-      }
-
-      .app-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        gap: 20px;
-        text-align: center;
-      }
-
-      .app-card {
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        cursor: pointer;
-      }
-
-      .app-icon {
-        width: 100px;
-        height: 100px;
-        border-radius: 10px;
-        margin-bottom: 10px;
-      }
+        p{
+            font-size: 24px;
+        }
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1 class="text-center mb-4">Download Our Apps</h1>
-
-      <div class="app-container">
-        <!-- Repeat the following app-card section for each app -->
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('com.ig.moto.racing')"
-        >
-          <img
-            src="https://play-lh.googleusercontent.com/A9yWoapR847rL-ZchAslvlsb7HOBoPRP5JpNKMFndx7kP1TyMHFi_0qzTerC6t8-d7s=s48"
-            alt="App Icon 1"
-            class="app-icon"
-          />
-          <h5>Your App Name 1</h5>
-        </div>
-
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('com.jura.robot.battle.transformation')"
-        >
-          <img
-            src="https://play-lh.googleusercontent.com/HbscZc3tZlT1mYPdfAQWQ3F_KR49K3OhEGUJmJ5a5azIxPIRLcjyGV452BDZPp1iPw=w526-h296"
-            alt="App Icon 2"
-            class="app-icon"
-          />
-          <h5>Your App Name 2</h5>
-        </div>
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('your.app.package.name2')"
-        >
-          <img
-            src="path/to/your/app-icon2.png"
-            alt="App Icon 2"
-            class="app-icon"
-          />
-          <h5>Your App Name 2</h5>
-        </div>
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('your.app.package.name2')"
-        >
-          <img
-            src="path/to/your/app-icon2.png"
-            alt="App Icon 2"
-            class="app-icon"
-          />
-          <h5>Your App Name 2</h5>
-        </div>
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('your.app.package.name2')"
-        >
-          <img
-            src="path/to/your/app-icon2.png"
-            alt="App Icon 2"
-            class="app-icon"
-          />
-          <h5>Your App Name 2</h5>
-        </div>
-        <div
-          class="app-card"
-          onclick="redirectToPlayStore('your.app.package.name2')"
-        >
-          <img
-            src="path/to/your/app-icon2.png"
-            alt="App Icon 2"
-            class="app-icon"
-          />
-          <h5>Your App Name 2</h5>
-        </div>
-        <!-- Repeat the above app-card section for each additional app -->
-      </div>
-    </div>
-
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Script to open Google Play Store on icon click -->
-    <script>
-      function redirectToPlayStore(packageName) {
-        try {
-          window.location.href = "market://details?id=" + packageName;
-        } catch (error) {
-          window.location.href =
-            "https://play.google.com/store/apps/details?id=" + packageName;
-        }
-      }
-    </script>
+    <p>
+      We are sincerely grateful to have you as part of the our apps community!
+      From the beginning, our apps has been driven by a passion for education
+      purpose, and your choice to use our app means a lot to us.
+    </p>
+    <p>
+      Our journey wouldn't be possible without the hard work and dedication of
+      our talented team of developers and designers. Each member has played a
+      vital role in bringing our apps to life, and we're excited about the
+      direction we're heading.
+    </p>
+    <p>
+      We're constantly working to enhance your experience with our apps, and
+      your satisfaction is our top priority. Help us spread the word by sharing
+      your experience with friends and family. Your support is crucial to our
+      growth.
+    </p>
+    <p>
+      Once again, thank you for choosing our apps. We look forward to serving
+      you and exceeding your expectations.
+    </p>
+    <p>Best regards,<br />The Team</p>
   </body>
 </html>
